<resources>
    <string name="app_name">CourseScheduler</string>
    <string name="terms">Terms</string>
    <string name="welcome_to_the_wgu_term_scheduler_app">Welcome to the WGU Term Scheduler App</string>
    <string name="main_image">Main Image</string>
    <string name="my_terms_list">Terms List</string>
    <string name="courses">Courses</string>
    <string name="assessments">Assessments</string>
    <string name="course_number">Course Number</string>
    <string name="course_name">Course Name</string>
    <string name="courseDateStart">Course Start Date</string>
    <string name="save">Save</string>
    <string name="introductory_algebra">Introductory Algebra</string>
    <string name="c100">C100</string>
    <string name="date">Date</string>
    <string name="channel_name">channelname</string>
    <string name="channel_description">channeldescription</string>
    <string name="mentor">Mentor</string>
    <string name="notes">Notes</string>
</resources>