<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditCourse">

    <ScrollView
        android:id="@+id/courseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name" />

                <EditText
                    android:id="@+id/editTextCourseName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/introductory_algebra" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseProgress"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Course Progress" />

                <EditText
                    android:id="@+id/editTextCourseProgress"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="in progress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseStartDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Course Start Date" />

                <EditText
                    android:id="@+id/editTextCourseStartDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="07/21/21" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseEndDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Course End Date" />

                <EditText
                    android:id="@+id/editTextCourseEndDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="09/21/21" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCourseTermID"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Course Term ID" />

                <EditText
                    android:id="@+id/editTextCourseTermID"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="Term 1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="saveCourse"
                    android:text="@string/save" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="date"
                    android:text="@string/date" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToNote"
                    android:text="@string/notes" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToMentor"
                    android:text="@string/mentor" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>